include/electionguard/manifest.h

/**
* A geopolitical unit describes any physical or
* virtual unit of representation or vote/seat aggregation.
* Use this entity for defining geopolitical units such as
* cities, districts, jurisdictions, or precincts,
* for the purpose of associating contests, offices, vote counts,
* or other information with the geographies.
*
* Geopolitical Units are not used when encrypting ballots but are required by
* ElectionGuard to determine the validity of ballot styles.
*
* See: https://developers.google.com/elections-data/reference/gp-unit
*/
typedef struct eg_geopolitical_unit_s eg_geopolitical_unit_t;
/*
* A BallotStyle works as a key to uniquely specify a set of contests. See also `ContestDescription`.
*
* For ElectionGuard, each contest is associated with a specific geopolitical unit,
* and each ballot style is associated with at least one geopolitical unit.
*
* It is up to the consuming application to determine how to interpreit the relationships
* between these entity types.
*/
typedef struct eg_ballot_style_s eg_ballot_style_t;
/*
* Use this entity to describe a political party that can then be referenced from other entities.
*
* It is not required to define a party for Electionguard.
*
* See: https://developers.google.com/elections-data/reference/party
*/
typedef struct eg_party_s eg_party_t;
/*
* Entity describing information about a candidate in a contest.
* See: https://developers.google.com/elections-data/reference/candidate
*
* Note: The ElectionGuard Data Spec deviates from the NIST model in that
* selections for any contest type are considered a "candidate".
* for instance, on a yes-no referendum contest, two `candidate` objects
* would be included in the model to represent the `affirmative` and `negative`
* selections for the contest.  See the wiki, readme's, and tests in this repo for more info.
*/
typedef struct eg_candidate_s eg_candidate_t;
/**
 * Use this data entity for describing a contest and linking the contest
 * to the associated candidates and parties.
 * See: https://developers.google.com/elections-data/reference/contest
 * Note: The ElectionGuard Data Spec deviates from the NIST model in that
 * `sequence_order` is a required field since it is used for ordering selections
 * in a contest to ensure various encryption primitives are deterministic.
 * For a given election, the sequence of contests displayed to a user may be different
 * however that information is not captured by default when encrypting a specific ballot.
 */
typedef struct eg_contest_description_s eg_contest_description_t;
/**
 * ContestDescriptionWithPlaceholders is a `ContestDescription` with ElectionGuard `placeholder_selections`.
 * (The ElectionGuard spec requires for n-of-m elections that there be *exactly* n counters that are one
 * with the rest zero, so if a voter deliberately undervotes, one or more of the placeholder counters will
 * become one. This allows the `ConstantChaumPedersenProof` to verify correctly for undervoted contests.)
 */
typedef struct eg_contest_description_with_placeholders_s
  eg_contest_description_with_placeholders_t;
/**
* Use this entity for defining the structure of the election and associated
* information such as candidates, contests, and vote counts.  This class is
* based on the NIST Election Common Standard Data Specification.  Some deviations
* from the standard exist.
*
* This structure is considered an immutable input object and should not be changed
* through the course of an election, as it's hash representation is the basis for all
* other hash representations within an ElectionGuard election context.
*
* @see https://developers.google.com/elections-data/reference/election
*/
typedef struct eg_election_manifest_s eg_election_manifest_t;
EG_API eg_electionguard_status_t eg_election_manifest_get_geopolitical_unit_at_index(
  eg_election_manifest_t *handle, uint64_t in_index, eg_geopolitical_unit_t **out_gp_unit_ref);
EG_API eg_electionguard_status_t eg_election_manifest_get_party_at_index(
  eg_election_manifest_t *handle, uint64_t in_index, eg_party_t **out_party_ref);
EG_API eg_electionguard_status_t eg_election_manifest_get_candidate_at_index(
  eg_election_manifest_t *handle, uint64_t in_index, eg_candidate_t **out_candidate_ref);
EG_API eg_electionguard_status_t eg_election_manifest_get_contest_at_index(
  eg_election_manifest_t *handle, uint64_t in_index, eg_contest_description_t **out_contest_ref);
EG_API eg_electionguard_status_t eg_election_manifest_get_ballot_style_at_index(
  eg_election_manifest_t *handle, uint64_t in_index, eg_ballot_style_t **out_ballot_style_ref);
/**
 * Get a hash of the metadata components of the `Manifest`
 * 
 * @param[in] handle the `eg_election_manifest_t`
 * @param[out] out_owned_hash the `eg_element_mod_q_t` crypto hash.  
 *                            Caller is responsible fo the lifecycle and 
 *                            must call `eg_element_mod_q_free`
 */
EG_API eg_electionguard_status_t eg_election_manifest_crypto_hash(
  eg_election_manifest_t *handle, eg_element_mod_q_t **out_owned_hash);
EG_API bool eg_election_manifest_is_valid(eg_election_manifest_t *handle);
EG_API eg_electionguard_status_t
eg_election_manifest_from_json(char *in_data, eg_election_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_election_manifest_from_bson(
  uint8_t *in_data, uint64_t in_length, eg_election_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_election_manifest_from_msgpack(
  uint8_t *in_data, uint64_t in_length, eg_election_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_election_manifest_to_json(eg_election_manifest_t *handle,
                                                              char **out_data, uint64_t *out_size);
// returns the size and fills out_data, caller is responsible for freeing the out_data
EG_API eg_electionguard_status_t eg_election_manifest_to_bson(eg_election_manifest_t *handle,
                                                              uint8_t **out_data,
                                                              uint64_t *out_size);
EG_API eg_electionguard_status_t eg_election_manifest_to_msgpack(eg_election_manifest_t *handle,
                                                                 uint8_t **out_data,
                                                                 uint64_t *out_size);
/**
* `InternalManifest` is a subset of the `Manifest` structure that specifies
* the components that ElectionGuard uses for conducting an election.  The key component is the
* `contests` collection, which applies placeholder selections to the `Manifest` contests
*/
typedef struct eg_internal_manifest_s eg_internal_manifest_t;
/**
 * Constructs an `InternalManifest` by passing the `Manifest` to the
 * constructor
 * 
 * @param[in] in_manifest the `eg_election_manifest_t`
 * @param[out] out_handle An opaque pointer to the object.  Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_internal_manifest_new(eg_election_manifest_t *in_manifest,
                                                          eg_internal_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_internal_manifest_free(eg_internal_manifest_t *handle);
/**
 * The hash of the election metadata
 * 
 * @param[out] out_manifest_hash_ref An opaque pointer to the description hash.  
 *                                      The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_internal_manifest_get_manifest_hash(
  eg_internal_manifest_t *handle, eg_element_mod_q_t **out_manifest_hash_ref);
EG_API uint64_t eg_internal_manifest_get_geopolitical_units_size(eg_internal_manifest_t *handle);
EG_API eg_electionguard_status_t eg_internal_manifest_get_geopolitical_unit_at_index(
  eg_internal_manifest_t *handle, uint64_t in_index, eg_geopolitical_unit_t **out_gp_unit_ref);
EG_API uint64_t eg_internal_manifest_get_contests_size(eg_internal_manifest_t *handle);
EG_API eg_electionguard_status_t eg_internal_manifest_get_contest_at_index(
  eg_internal_manifest_t *handle, uint64_t in_index,
  eg_contest_description_with_placeholders_t **out_contest_ref);
EG_API uint64_t eg_internal_manifest_get_ballot_styles_size(eg_internal_manifest_t *handle);
EG_API eg_electionguard_status_t eg_internal_manifest_get_ballot_style_at_index(
  eg_internal_manifest_t *handle, uint64_t in_index, eg_ballot_style_t **out_ballot_style_ref);
EG_API eg_electionguard_status_t
eg_internal_manifest_from_json(char *in_data, eg_internal_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_internal_manifest_from_bson(
  uint8_t *in_data, uint64_t in_length, eg_internal_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_internal_manifest_from_msgpack(
  uint8_t *in_data, uint64_t in_length, eg_internal_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_internal_manifest_to_json(eg_internal_manifest_t *handle,
                                                              char **out_data, uint64_t *out_size);
// returns the size and fills out_data, caller is responsible for freeing the out_data
EG_API eg_electionguard_status_t eg_internal_manifest_to_bson(eg_internal_manifest_t *handle,
                                                              uint8_t **out_data,
                                                              uint64_t *out_size);
EG_API eg_electionguard_status_t eg_internal_manifest_to_msgpack(eg_internal_manifest_t *handle,
                                                                 uint8_t **out_data,
                                                                 uint64_t *out_size);