bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


            [DllImport(DllName, EntryPoint = "eg_election_manifest_get_geopolitical_unit_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetGeopoliticalUnitAtIndex(
                ElectionGuard.Manifest.External.ManifestHandle handle,
                ulong index,
                out GeopoliticalUnit.GeopoliticalUnitHandle gpUnit);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_get_party_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetPartyAtIndex(
                ElectionGuard.Manifest.External.ManifestHandle handle,
                ulong index,
                out Party.PartyHandle party);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_get_candidate_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetCandidateAtIndex(
                ElectionGuard.Manifest.External.ManifestHandle handle,
                ulong index,
                out Candidate.CandidateHandle candidate);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_get_contest_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetContestAtIndex(
                ElectionGuard.Manifest.External.ManifestHandle handle,
                ulong index,
                out ContestDescription.ContestDescriptionHandle contest);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_get_ballot_style_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotStyleAtIndex(
                ElectionGuard.Manifest.External.ManifestHandle handle,
                ulong index,
                out BallotStyle.BallotStyleHandle ballotStyle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                ElectionGuard.Manifest.External.ManifestHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_is_valid",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern bool IsValid(ElectionGuard.Manifest.External.ManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_from_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromJson(
                [MarshalAs(UnmanagedType.LPStr)] string data,
                out ElectionGuard.Manifest.External.ManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_from_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromBson(
                byte* data, ulong length, out ElectionGuard.Manifest.External.ManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong length, out ElectionGuard.Manifest.External.ManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_to_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToJson(
                ElectionGuard.Manifest.External.ManifestHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_to_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToBson(
                ElectionGuard.Manifest.External.ManifestHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_to_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToMsgPack(
                ElectionGuard.Manifest.External.ManifestHandle handle, out IntPtr data, out ulong size);
        }

        #endregion

        #region InternalManifest

        internal static class InternalManifest
        {
            internal struct InternalManifestType { };

            internal class InternalManifestHandle
                : ElectionGuardSafeHandle<InternalManifestType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = InternalManifest.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"InternalManifest Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                ElectionGuard.Manifest.External.ManifestHandle manifest,
                out InternalManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(
                InternalManifestType* handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_get_manifest_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetManifestHash(
                InternalManifestHandle handle,
                out ElementModQ.ElementModQHandle manifest_hash);

            [DllImport(DllName,
                EntryPoint = "eg_internal_manifest_get_geopolitical_units_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetGeopoliticalUnitsSize(
                InternalManifestHandle handle);

            [DllImport(DllName,
                EntryPoint = "eg_internal_manifest_get_geopolitical_unit_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetGeopoliticalUnitAtIndex(
                InternalManifestHandle handle,
                ulong index,
                out GeopoliticalUnit.GeopoliticalUnitHandle gpUnit);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_get_contests_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetContestsSize(
                InternalManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_get_contest_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetContestAtIndex(
                InternalManifestHandle handle,
                ulong index,
                out ContestDescriptionWithPlaceholders.ContestDescriptionWithPlaceholdersHandle contest);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_get_ballot_styles_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetBallotStylesSize(
                InternalManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_get_ballot_style_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotStyleAtIndex(
                InternalManifestHandle handle,
                ulong index,
                out BallotStyle.BallotStyleHandle ballotStyle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_from_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromJson(
                [MarshalAs(UnmanagedType.LPStr)] string data,
                out InternalManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_from_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromBson(
                byte* data, ulong length, out InternalManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong length, out InternalManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_to_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToJson(
                InternalManifestHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_to_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToBson(
                InternalManifestHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_internal_manifest_to_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToMsgPack(
                InternalManifestHandle handle, out IntPtr data, out ulong size);
        }

        #endregion

        #region ContextConfiguration
        internal static class ContextConfiguration
        {
            internal struct ContextConfigurationType { };

            internal class ContextConfigurationHandle
                : ElectionGuardSafeHandle<ContextConfigurationType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = ContextConfiguration.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"ContextConfiguration Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_election_context_config_get_allowed_overvotes",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetAllowedOverVotes(
                ContextConfigurationHandle handle,
                ref bool allowed_overvotes);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_election_context_config_get_max_ballots",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetMaxBallots(
                ContextConfigurationHandle handle,
                ref UInt64 max_ballots);


            [DllImport(DllName, EntryPoint = "eg_ciphertext_election_context_config_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(ContextConfigurationType* handle);
